--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-user.properties.file=/home/bill-01/.netbeans/8.1/build.properties
+file.reference.jfoenix.jar=/home/mateus/\u00c1rea de Trabalho/jfoenix.jar
+user.properties.file=/home/mateus/.netbeans/8.1/build.properties
