--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.jfoenix.jar=/home/bill-01/Videos/CineTudo/jfoenix.jar
-user.properties.file=/home/bill-01/.netbeans/8.1/build.properties
+file.reference.jfoenix.jar=/home/jose/Documents/projects/CineTudo/jfoenix.jar
+user.properties.file=/home/jose/.netbeans/8.2/build.properties
